@@ -14,7 +14,8 @@ with Magick++ itself.
 <UL>
   <LI> Added endian method to Image, and endianImage class to STL.h in
     order to support setting endian option for formats which support
-    the notion (e.g. TIFF).
+    the notion (e.g. TIFF).<BR>
+  <LI> DrawableCompositeImage was not working.  Now it does.
 
 </UL>
 <p>
